--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -16,11 +16,11 @@
           <ul class="dropdown-menu">
             <li><a href="#">Page 1-1</a></li>
             <li><a href="#">Page 1-2</a></li>
-            <li><a href="#">Page 1-3</a></li>
+            <li><a routerLink="/companies/all">All Companies</a></li>
           </ul>
         </li>
         <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li><a routerLink="/companies/all">All Companies</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a routerLink="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
