--- a/src/app/components/company/company.component.html
+++ b/src/app/components/company/company.component.html
@@ -1,20 +1,20 @@
-<div class="container fluid " >
-  <div class="row">
-      <div class="col-sm-4" *ngFor="let company of companies" >
-          <div class="card" >
-              <div class="card-block">
-                  <h4 class="card-title" >Company</h4>
-                  <p class="card-text" >{{company.name}}</p>
-              </div>
-              </div>
-          </div>
-          <br/>
-      </div>
-  </div>
-  <nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item"><a class="page-link" routerLink="/companies/all?page={{number+1}}">Next</a></li>        
-      <li class="page-item" *ngFor="let item of totalPages"><a class="page-link" routerLink="/companies/all?page={{item+1}}">{{item+1}}</a></li>
-      <li class="page-item"><a class="page-link" routerLink="/companies/all?page={{number+1}}">Next</a></li>
-    </ul>
-  </nav>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4" *ngFor="let company of companies">
+            <div class="card">
+                <div class="card-block">
+                    <h4 class="card-title">Company</h4>
+                    <p class="card-text">{{company.name}}</p>
+                </div>
+            </div>
+        </div>
+        <br/>
+    </div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item"><a class="page-link" routerLink="/companies/all/{{currentPage-1}}">Previous</a></li>
+            <li class="page-item" ><a class="page-link" routerLink="/companies/all/{{currentPage}}">{{currentPage}}/{{totalPages}}</a></li>
+            <li class="page-item"><a class="page-link" routerLink="/companies/all/{{currentPage+1}}">Next</a></li>
+        </ul>
+    </nav>
+</div>
