--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -10,21 +10,30 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+        <li ><a routerLink="/">Home</a></li>
+        <li *ngIf="isAdmin || isAuthenticated" class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Campaigns<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Page 1-1</a></li>
-            <li><a href="#">Page 1-2</a></li>
-            <li><a routerLink="/companies/all">All Companies</a></li>
+            <li *ngIf="isAdmin"><a href="#">Add Campaign</a></li>
+            <li><a href="#">All Campaign</a></li>
+
           </ul>
         </li>
         <li><a href="#">Page 2</a></li>
-        <li><a routerLink="/companies/all">All Companies</a></li>
+        <li *ngIf="isAdmin || isAuthenticated" class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Companies<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li *ngIf="isAdmin"><a href="#">Add Company</a></li>
+            <li><a routerLink="/companies/all/0">All Companies</a></li>
+
+          </ul>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a routerLink="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li *ngIf="!isAuthenticated"><a routerLink="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li *ngIf="!isAuthenticated"><a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li *ngIf="isAuthenticated"><a (click)="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout {{user.username}}</a></li>
+
       </ul>
     </div>
   </div>
