--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -14,7 +14,7 @@
 
           <div style="margin-bottom: 25px" class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input id="login-username" type="text" class="form-control" [(ngModel)]="user.username" name="username" value="" placeholder="Email">
+            <input id="login-username" type="text" class="form-control" [(ngModel)]="user.username" name="username" >
           </div>
 
           <div style="margin-bottom: 25px" class="input-group">
