--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -14,12 +14,11 @@
         <li *ngIf="isAdmin || isAuthenticated" class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Campaigns<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li *ngIf="isAdmin"><a href="#">Add Campaign</a></li>
-            <li><a href="#">All Campaign</a></li>
+            <li *ngIf="isAdmin"><a routerLink="/campaign/add">Add Campaign</a></li>
+            <li><a routerLink="/campaign/all">All Campaign</a></li>
 
           </ul>
         </li>
-        <li><a href="#">Page 2</a></li>
         <li *ngIf="isAdmin || isAuthenticated" class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Companies<span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -32,7 +31,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li *ngIf="!isAuthenticated"><a routerLink="/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         <li *ngIf="!isAuthenticated"><a routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        <li *ngIf="isAuthenticated"><a (click)="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout {{user.username}}</a></li>
+        <li *ngIf="isAuthenticated"><a (click)="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout {{username}}</a></li>
 
       </ul>
     </div>
