--- a/src/app/components/campaign/all-campaign/all-campaign.component.html
+++ b/src/app/components/campaign/all-campaign/all-campaign.component.html
@@ -8,7 +8,7 @@
                       <div class="col col-xs-6">
                           <h3 class="panel-title">Campaigns</h3>
                       </div>
-                      <div class="col col-xs-6 text-right" sec:authorize="hasRole('ADMIN')">
+                      <div class="col col-xs-6 text-right" *ngIf="isAdmin">
                           <button  type="button" class="btn btn-sm btn-primary btn-create"><a href="/campaign/add" style="color: white">Create New</a></button>
                       </div>
                   </div>
@@ -17,7 +17,7 @@
                   <table class="table table-striped table-bordered table-list">
                       <thead>
                       <tr>
-                          <th sec:authorize="hasRole('ADMIN')"><em class="glyphicon glyphicon-cog"></em></th>
+                          <th *ngIf="isAdmin"><em class="glyphicon glyphicon-cog"></em></th>
                           <th style="width: 200px">Start Date</th>
                           <th>End Date</th>
                           <th>Description</th>
@@ -27,8 +27,8 @@
                       </thead>
                       <tbody>
                       <tr *ngFor="let step of campaigns">
-                          <td align="center" >
-                              <a th:onclick="'confirmDelete('+${camp.id}+')'" class="btn btn-danger" sec:authorize="hasRole('ADMIN')"><i class="glyphicon glyphicon-trash"></i></a>
+                          <td align="center" *ngIf="isAdmin">
+                              <button  (click) = "deleteCampaign(step.id)" class="btn btn-danger" ><i class="glyphicon glyphicon-trash"></i></button>
                           </td>
                           <td >{{step.startDate | date}}</td>
                           <td >{{step.endDate | date}}</td>
